added to the git ignore and continued with the base layout of the project

--- a/flask_app/templates/one_party.html
+++ b/flask_app/templates/one_party.html
@@ -7,6 +7,18 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>One party</h1>
+    <div class="container">
+      <h1>One party</h1>
+      <div>
+        <h3>Campaign name</h3>
+        <p>Description</p>
+        <ul>
+          <p>Players</p>
+          <li>Player 1</li>
+          <li>Player 2</li>
+          <li>Player 3</li>
+        </ul>
+      </div>
+    </div>
   </body>
 </html>
