--- a/flask_app/templates/update_player.html
+++ b/flask_app/templates/update_player.html
@@ -8,5 +8,18 @@
   </head>
   <body>
     <h1>update this player</h1>
+    <div>
+      <h3>Player Name</h3>
+      <p>Player class:</p>
+      <ul>
+        <p>Player Stat List:</p>
+        <li>1: Strength</li>
+        <li>2: Dexterity</li>
+        <li>3: Constitution</li>
+        <li>4: Wisdom</li>
+        <li>5: Intelligence</li>
+        <li>6: Charisma</li>
+      </ul>
+    </div>
   </body>
 </html>
