--- a/flask_app/templates/add_party.html
+++ b/flask_app/templates/add_party.html
@@ -4,9 +4,39 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='add_party.css')}}"
+    />
+        <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
     <title>Document</title>
   </head>
   <body>
-    <h1>Add a party</h1>
-  </body>
-</html>
+      <div class="container">
+          <img src="https://i.pinimg.com/originals/2e/82/b4/2e82b40759b988c68043ac67c21f07d0.jpg" alt="">
+          <div class="create">
+
+              <h1>Create Your Campaign</h1>
+              <form action="">
+                  <div class="mb-3">
+                      <label for="formGroupExampleInput2" class="form-label">Title</label>
+                      <input
+                      type="text"
+                      class="form-control"
+                      id="formGroupExampleInput2"
+                      placeholder=""
+                      />
+                      <div>
+                          <label for=""></label>
+                          <input type="text" name="" id="">
+                        </div>
+                    </form>
+                </div>
+</div>
+</body>
+  </html>
