--- a/flask_app/templates/all_parties.html
+++ b/flask_app/templates/all_parties.html
@@ -4,9 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='all_parties.css')}}"
+    />
     <title>Document</title>
   </head>
   <body>
-    <h1>Here are all open parties</h1>
+    <div class="header">
+      <button>Add Campaign</button>
+      <h1>All open Campaigns</h1>
+    </div>
+    <div class="container"></div>
+    <div class="join">
+      <header>Join a campaign</header>
+      <button>Join</button>
+    </div>
   </body>
 </html>
