--- a/flask_app/templates/login.html
+++ b/flask_app/templates/login.html
@@ -4,9 +4,84 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="{{ url_for('static', filename='login.css')}}">
     <title>Document</title>
   </head>
   <body>
-    <h1>Login</h1>
+    <h1>Enter a Campaign</h1>
+    <div class="container">
+
+        <h3>Register</h3>
+        <div class="register">
+      <div class="mb-3">
+        <label for="formGroupExampleInput" class="form-label">Name</label>
+        <input
+          type="text"
+          class="form-control"
+          id="formGroupExampleInput"
+          placeholder=""
+        />
+      </div>
+      <div class="mb-3">
+        <label for="formGroupExampleInput2" class="form-label">Email</label>
+        <input
+          type="email"
+          class="form-control"
+          id="formGroupExampleInput2"
+          placeholder=""
+        />
+        <div class="mb-3">
+          <label for="formGroupExampleInput" class="form-label">Password</label>
+          <input
+            type="text"
+            class="form-control"
+            id="formGroupExampleInput"
+            placeholder=""
+          />
+        </div>
+        <div class="mb-3">
+          <label for="formGroupExampleInput2" class="form-label"
+            >Confirm Password</label
+          >
+          <input
+            type="text"
+            class="form-control"
+            id="formGroupExampleInput2"
+            placeholder=""
+          />
+        </div>
+      </div>
+    </div>
+
+    <!-- login -->
+    <h3>Login</h3>
+<div class="login">
+
+          <div class="mb-3">
+        <label for="formGroupExampleInput2" class="form-label">Email</label>
+        <input
+        type="email"
+        class="form-control"
+        id="formGroupExampleInput2"
+          placeholder=""
+        />
+        <div class="mb-3">
+          <label for="formGroupExampleInput" class="form-label">Password</label>
+          <input
+            type="text"
+            class="form-control"
+            id="formGroupExampleInput"
+            placeholder=""
+            />
+        </div>
+    </div>
+</div>
+    
   </body>
 </html>
