--- a/flask_app/templates/one_party.html
+++ b/flask_app/templates/one_party.html
@@ -4,21 +4,29 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='one_party.css')}}"
+    />
     <title>Document</title>
   </head>
   <body>
     <div class="container">
-      <h1>One party</h1>
-      <div>
-        <h3>Campaign name</h3>
-        <p>Description</p>
+      <h1>Open Campaign</h1>
+
+      {% for one in campaign %}
+      <div class="party">
         <ul>
-          <p>Players</p>
-          <li>Player 1</li>
-          <li>Player 2</li>
-          <li>Player 3</li>
+          <h3><a href="/update/{{one.id}}">{{one.name}}</a></h3>
+          <li>
+            Strength: {{one.strength}} Dexterity: {{one.dexterity}}
+            Constitution: {{one.constitution}} Wisdom: {{one.wisdom}}
+            Intelligence: {{one.intelligence}} Charisma: {{one.charisma}}
+          </li>
+          <a href="/delete/{{one.id}}">Leave Campaign</a>
         </ul>
       </div>
+      {% endfor %}
     </div>
   </body>
 </html>
