--- a/flask_app/templates/update_player.html
+++ b/flask_app/templates/update_player.html
@@ -4,22 +4,96 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='add_player.css')}}"
+    />
     <title>Document</title>
   </head>
   <body>
-    <h1>update this player</h1>
-    <div>
-      <h3>Player Name</h3>
-      <p>Player class:</p>
-      <ul>
-        <p>Player Stat List:</p>
-        <li>1: Strength</li>
-        <li>2: Dexterity</li>
-        <li>3: Constitution</li>
-        <li>4: Wisdom</li>
-        <li>5: Intelligence</li>
-        <li>6: Charisma</li>
-      </ul>
+    <h1 class="align-center">Level Up {{oneUser.name}}</h1>
+
+    <div class="container">
+      <div>
+        <ul>
+          <h3 class="align-center">Current Stats</h3>
+          <form action="/updatePlayer/{{oneUser.id}}" method="post">
+            <div>
+              <label for="">Strength</label>
+              <input
+                class="input"
+                type="number"
+                max="20"
+                min="1"
+                name="strength"
+                value="{{oneUser.strength}}"
+              />
+            </div>
+            <div>
+              <label for="">Dexterity</label>
+              <input
+                class="input"
+                type="number"
+                max="20"
+                min="1"
+                name="dexterity"
+                value="{{oneUser.dexterity}}"
+              />
+            </div>
+            <div>
+              <label for="">Constitution</label>
+              <input
+                class="input"
+                type="number"
+                max="20"
+                min="1"
+                name="constitution"
+                value="{{oneUser.constitution}}"
+              />
+            </div>
+            <div>
+              <label for="">Wisdom</label>
+              <input
+                class="input"
+                type="number"
+                max="20"
+                min="1"
+                name="wisdom"
+                value="{{oneUser.wisdom}}"
+              />
+            </div>
+            <div>
+              <label for="">Intelligence</label>
+              <input
+                class="input"
+                type="number"
+                max="20"
+                min="1"
+                name="intelligence"
+                value="{{oneUser.intelligence}}"
+              />
+            </div>
+            <div>
+              <label for="">Charisma</label>
+              <input
+                class="input"
+                type="number"
+                max="20"
+                min="1"
+                name="charisma"
+                value="{{oneUser.charisma}}"
+              />
+            </div>
+            <button type="submit" class="btn btn-secondary">Update</button>
+          </form>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
