fixed bugs and got the add add player working

--- a/flask_app/templates/add_player.html
+++ b/flask_app/templates/add_player.html
@@ -30,7 +30,7 @@
           placeholder="Character Name"
           name="name"
         />
-<!-- <select class="form-select" aria-label="Default select example">
+<!-- <select class="form-select" aria-label="Default select example" name="playerType">
   <option selected>Choose your class</option>
   <option value="1">Barbarian</option>
   <option value="2">Bard</option>
