--- a/flask_app/templates/one_party.html
+++ b/flask_app/templates/one_party.html
@@ -19,9 +19,10 @@
         <ul>
           <h3><a href="/update/{{one.id}}">{{one.name}}</a></h3>
           <li>
-            Strength: {{one.strength}} Dexterity: {{one.dexterity}}
-            Constitution: {{one.constitution}} Wisdom: {{one.wisdom}}
-            Intelligence: {{one.intelligence}} Charisma: {{one.charisma}}
+            {{playerType}} Strength: {{one.strength}} Dexterity:
+            {{one.dexterity}} Constitution: {{one.constitution}} Wisdom:
+            {{one.wisdom}} Intelligence: {{one.intelligence}} Charisma:
+            {{one.charisma}}
           </li>
           <a href="/delete/{{one.id}}">Leave Campaign</a>
         </ul>
